# amazon_books_scraper

./: LICENSE  README.md  pyproject.toml  requirements.txt  settings.py
recordings/: pytest.ini  test_get_book_price_rec.py
script_for_testing_all_humblebundle_items/: books.json  fetch_humblebundle_info.py  get_amazon_info_for_books.py  run_test.sh  stats_first_try.txt  stats_inauthor_publisher.txt
script_for_testing_all_humblebundle_items/humblebundle_scrapper/: apis.py  interfaces.py  services.py
script_for_testing_all_humblebundle_items/stats/: stats_all_info_in_query.txt
src/amazon_books_scraper/: __init__.py  amazon_scraper.py  apis.py  enums.py  example.py  interfaces.py  services.py
tests/: conftest.py  get_book_price_tests.py  test_get_book_price.py  test_product_string_to_product_info.py  tests_get_book_price.py  vcr_utils.py
tests/cassettes/test_get_book_price/: TestCase.test_etextbook.yaml  TestCase.test_find_comics.yaml  TestCase.test_find_comics_strips_unnecessary_words_from_author.yaml  TestCase.test_find_dive_into_systems.yaml  TestCase.test_get_book_price_audible_audiobook.yaml  TestCase.test_get_book_price_simple.yaml  TestCase.test_get_book_price_unity_ai.yaml  TestCase.test_get_not_found_audiobook.yaml  TestCase.test_get_not_found_book.yaml  TestCase.test_slaine.yaml  TestCase.test_write_great_code.yaml  test_find_comics  test_find_comics.yaml  test_find_comics_strips_unnecessary_words_from_author  test_find_comics_strips_unnecessary_words_from_author.yaml  test_get_book_price_audible_audiobook  test_get_book_price_kindle_not_first_in_string  (+10 more)
