[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="amazon_books_scraper"
version = "0.0.2"
authors = [
    { name="Example Author", email="lukzieniewicz@gmail.com"}
]
description = "A simple python library for scraping basic info about books from Amazon web store"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github/com/lzieniew/amazon_books_scraper"
"Bug Tracker" = "https://github.com/lzieniew/amazon_books_scraper/issues"

